# image-metadata

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs
tests/: integration_test.rs
