[package]
name = "image-metadata"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"

[dependencies]
kamadak-exif = "0.5.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"

[dev-dependencies]
indoc = "1.0"
assert_cmd = "1.0.1"